--- a/style/style.css
+++ b/style/style.css
@@ -87,6 +87,17 @@ table#SkillsUsed td
     padding-right: 20px;
 }
 
+th#skillshead
+{
+    line-height: 1.9;
+}
+img#skillWaiting
+{
+    padding: 0;
+    margin: 0 0 0 50px;
+    border: none;
+    display: none;
+}
 /* Level classes */
 .Nemotionlevel9,
 .Pemotionlevel0
