Fix start of week display bug, change some date formatting.

--- a/style/style.css
+++ b/style/style.css
@@ -13,6 +13,11 @@
     float: left;
 }
 
+table.DbtSummary th,
+table.DbtSummary td{
+    text-align: center;
+}
+
 table.emotions{
     border-collapse: collapse;
     border: 1px solid black;
