Make removal of DBT skills via icon instead of having entire TD clickable.

--- a/style/style.css
+++ b/style/style.css
@@ -59,8 +59,7 @@ div.skills
     list-style-image: url(/images/icons/extrasmall/edit_add.png);
     line-height: 1.8;
 }
-#content li.skills:hover,
-#content td.skillsused:hover
+#content li.skills:hover
 {
     background: lightsteelblue;
      -moz-border-radius: 3px;
