add quotes to url()

--- a/style/style.css
+++ b/style/style.css
@@ -56,7 +56,7 @@ div.skills
 {
     padding: 0;
     margin: 0;
-    list-style-image: url(/images/icons/extrasmall/edit_add.png);
+    list-style-image: url('/images/icons/extrasmall/edit_add.png');
     line-height: 1.8;
 }
 #content li.skills:hover
