--- a/style/style.css
+++ b/style/style.css
@@ -48,18 +48,16 @@ div.skills
     margin: 0 20px 0 0;
     width: 15em;
 }
-#content ul
-{
-    /* margin: 0; */
-}
-#content li.skills
+
+/* #content li.skills */
+li.skills
 {
     padding: 0;
     margin: 0;
     list-style-image: url('/images/icons/extrasmall/edit_add.png');
     line-height: 1.8;
 }
-#content li.skills:hover
+/*#content*/ li.skills:hover
 {
     background: lightsteelblue;
      -moz-border-radius: 3px;
