--- a/style/style.css
+++ b/style/style.css
@@ -123,6 +123,32 @@ img#skillWaiting
 #PrePostForm input.text { margin-bottom:12px; width:50px; padding: .4em; }
 #PrePostForm fieldset { padding:0; border:0; margin-top:25px; }
 
+#ProsConsForm table
+{
+    margin: 5px 0;
+    padding: 0;
+    border: none;
+    background: none;
+    line-height: 1.0em;
+}
+#ProsConsForm td, 
+#ProsConsForm tr{
+    border: none;
+    background: none;
+}
+#ProsConsForm fieldset{
+    border: none;
+    background: none;    
+}
+#ProsConsForm input{
+    width: 500px;
+    background: none;
+}
+#ProsConsForm textarea{
+    width: 240px;
+    resize: none;
+    background: none;
+}
 /* Level classes */
 .Nemotionlevel9,
 .Pemotionlevel0
