Convert module to use improved jquery.contextMenu

--- a/style/style.css
+++ b/style/style.css
@@ -103,12 +103,8 @@ table#SkillsUsedTable td
 td.skillsused img{
     vertical-align: middle;
     padding: 1px;
-    opacity: 0.6;
-    filter: alpha(opacity=60);
 }
-td.skillsused img:hover{
-    opacity: 1.0;
-    filter: alpha(opacity=100);
+.r90 {
     transform: rotate(-90deg);
     -moz-transform: rotate(-90deg);
 }
