--- a/style/jquery.contextMenu.css
+++ b/style/jquery.contextMenu.css
@@ -88,12 +88,17 @@
     .context-menu-item.icon:before {}
  */
 .context-menu-item.icon { min-height: 18px; background-repeat: no-repeat; background-position: 4px 2px; }
+/*
 .context-menu-item.icon-edit { background-image: url(images/page_white_edit.png); }
 .context-menu-item.icon-cut { background-image: url(images/cut.png); }
 .context-menu-item.icon-copy { background-image: url(images/page_white_copy.png); }
 .context-menu-item.icon-paste { background-image: url(images/page_white_paste.png); }
 .context-menu-item.icon-delete { background-image: url(images/page_white_delete.png); }
 .context-menu-item.icon-quit { background-image: url(images/door.png); }
+*/
+.context-menu-item.icon-rate { background-image: url('../../../images/icons/extrasmall/xedit.png'); }
+.context-menu-item.icon-proscons { background-image: url('../../../images/icons/extrasmall/easymoblog.png'); }
+.context-menu-item.icon-delete { background-image: url('../../../images/icons/extrasmall/14_layer_deletelayer.png'); }
 
 /* vertically align inside labels */
 .context-menu-input > label > * { vertical-align: top; }
