--- a/style/style.css
+++ b/style/style.css
@@ -49,20 +49,36 @@ div.skills
 }
 div.skills + div.skills
 {
-    margin: 0 0 0 10px;
+    margin: 0 0 0 20px;
+}
+h4.skills {
+    border-bottom: 1px solid black;
+    margin: 0 0 5px 0;
+}
+div.skills ul{
+   margin: 0 0 10px 3px;
 }
 
 li.skills
 {
     padding: 0;
-    margin: 0;
-    list-style-image: url('../../../images/icons/extrasmall/edit_add.png');
-    line-height: 1.8;
+    /* margin: 0; */
+    /* list-style-image: url('../../../images/icons/extrasmall/edit_add.png'); */
+    line-height: 1.5em;
 }
-li.skills:hover
+li.skills a
 {
-    background: lightsteelblue;
-     -moz-border-radius: 3px;
+    font-weight: normal;
+}
+li.skills img{
+    vertical-align: middle;
+    padding: 1px 1px 1px 5px;
+    opacity: 0.6;
+    filter: alpha(opacity=60);
+}
+li.skills img:hover{
+    opacity: 1.0;
+    filter: alpha(opacity=100);
 }
 
 div#EmotionRegulation .skills
@@ -75,7 +91,7 @@ div#EmotionRegulation div.skills.PLEASEMaster
 }
 div#Mindfullness div.skills
 {
-    width: 10em;
+    width: 12em;
 }
 div.skills.InterpersonalSkills
 {
@@ -100,6 +116,7 @@ table#SkillsUsedTable td
     padding-left: 20px;
     padding-right: 20px;
 }
+li.skills img,
 td.skillsused img{
     vertical-align: middle;
     padding: 1px;
